// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWithValidation when rendering message as text with no error message passed should simply render the child as it is 1`] = `
<DocumentFragment>
  <input
    class="Input"
    data-lpignore="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should remove the message when field is blurred 1`] = `
<DocumentFragment>
  <input
    class="Input Input--context_bad"
    data-lpignore="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should render the message when field is focused 1`] = `
<DocumentFragment>
  <input
    class="Input Input--context_bad"
    data-lpignore="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should set context to bad on child 1`] = `
<DocumentFragment>
  <input
    class="Input Input--context_bad"
    data-lpignore="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`FieldWithValidation when using tooltip with no error message passed should not render a tooltip with no error message 1`] = `
<DocumentFragment>
  <input
    class="Input"
    data-lpignore="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`FieldWithValidation with error message passed should set context to bad on child 1`] = `
<DocumentFragment>
  <input
    class="Input Input--context_bad"
    data-lpignore="true"
    type="text"
    value=""
  />
  <p
    class="Text--context_bad Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</DocumentFragment>
`;
